[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "price-platform-core"
version = "0.1.0.dev1"
authors = [
    { name="Toufik Saouchi", email="toufik.saouchi@gmail.com" },
]
description = "market price analysis system"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
dependencies = [
    "numpy",
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "asyncpg",
    "httpx",
    "pydantic>=2",
    "python-dotenv",
    "openai",
    "msgpack>=1.1.2",
]

[dependency-groups]
dev = [
    "pytest",
    "hypothesis>=6.151.9",
    "pytest-asyncio",
    "ruff",
    "mypy"
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.mypy]
python_version = "3.14"
strict = true

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://bitbucket.org/stoufik/shared-domain"